--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -404,17 +404,17 @@ This section covers changes and additions to userland applications, contributed 
 [[userland-config]]
 === Userland Configuration Changes
 
-A new `kdc_restart` variable is available that manages man:kdc[8] (or `krb5kdc`) under man:daemon[8].
+The Kerberos v5 Authentication Service, man:krb5kdc[8], has gained a new `kdc_restart` variable under man:daemon[8].
 Set `kdc_restart="YES"` in man:rc.conf[5] to auto restart kdc on abnormal termination.
 Set `kdc_restart_delay="N"` to the number of seconds to delay before restarting the kdc.
 gitref:abc4b3088941[repository=src]
 
-By default, changes shown in email by the man:periodic[8] facility from the `daily` scripts show less context than before to reduce the size of the output.
+The `daily` man:periodic[8] scripts now show less context in emails by default to reduce output size.
 The behavior can be controlled by the `daily_diff_flags` variable in man:periodic.conf[5].
 Similarly, the changes shown by the security scripts show less context than previously, controlled by the `security_status_diff_flags` variable in man:periodic.conf[5].
 gitref:538994626b9f[repository=src], gitref:37dc394170a5[repository=src], gitref:128e78ffb084[repository=src]
 
-man:bsnmpd[1] no longer supports legacy UDP transport.
+The man:bsnmpd[1] daemon no longer supports legacy UDP transport.
 Users, that have not updated their `/etc/snmpd.config` since 12.0-RELEASE or older will need to merge in the new configuration.
 In particular, the transport definition shall be changed from begemotSnmpdPortStatus OID to begemotSnmpdTransInetStatus.
 gitref:9ba51cce8bbd[repository=src]
