--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -652,6 +652,18 @@ gitref:b9b0e105c357[repository=src],
 gitref:929f5966a9fd[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 
+The man:rtw88[4] driver has been updated to Linux v6.17.
+A possible issue that devices cannot authenticate is still being investigated.
+gitref:c1d365f39e08[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
+
+The man:rtw89[4] driver has been updated to Linux v6.17.
+The driver is under-tested and may still have issues.
+gitref:b35044b38f74[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
+
+The man:iwlwifi[4] driver has been updated to Linux v6.17.
+The BE200 based chipsets will need newer firmware requiring further driver fixes which are not in this release.
+gitref:69caa1cf3ce5[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
+
 [[userland-libraries]]
 === Runtime Libraries and API
 
@@ -925,18 +937,6 @@ A driver is available for man:ice[4] Ethernet network controllers in the Intel E
 It was upgraded to version 1.43.2-k.
 gitref:38a1655adcb3[repository=src] {{< sponsored "Intel Corporation" >}}
 
-man:rtw88[4]: Merge Realtek's rtw88 driver based on Linux v6.17.
-A possible issue that devices cannot authenticate is still being investigated.
-gitref:c1d365f39e08[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
-
-man:rtw89[4]: Merge Realtek's rtw89 driver based on Linux v6.17.
-The driver is under-tested and may still have issues.
-gitref:b35044b38f74[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
-
-man:iwlwifi[4]: Merge Intels's iwlwifi mvm/mld driver based on Linux v6.17.
-The BE200 based chipsets will need newer firmware requiring further driver fixes which are not in this release.
-gitref:69caa1cf3ce5[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
-
 Numerous stability improvements have been in the man:iwlwifi[4] driver for Intel Wi-Fi devices.
 {{< sponsored "The FreeBSD Foundation" >}}
 
@@ -971,9 +971,6 @@ gitref:14c22e28e4ee[repository=src]
 
 Meteor Lake support has been added to the man:ig4[4] driver.
 gitref:56f0fc0011c2[repository=src]
-
-A new wireless driver supporting some Realtek chipsets is available: man:rtw89[4].
-gitref:a2d1e07f6451[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 Support for Realtek 8156/8156B has been moved from man:cdce[4] to man:ure[4] for improved performance and reliability.
 gitref:630077a84186[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
@@ -1357,8 +1354,11 @@ The LinuxKPI 802.11 compatibility layer man:linuxkpi_wlan[4] gained support for 
 Following other drivers man:iwlwififw[4] firmware was removed from the base system in favor of the ports based solution and man:fwget[8] support.  In case of updating from earlier releases, users must install the firmware packages upfront. {{< sponsored "The FreeBSD Foundation" >}}
 
 The man:iwlwifi[4] wireless driver supports 802.11ac (VHT) for some Intel Wi-Fi 5, and all of Intel Wi-Fi 6 and Wi-Fi 7 hardware. {{< sponsored "The FreeBSD Foundation" >}}
-The man:iwx[4] wireless driver supports 802.11ac (VHT) for Intel Wi-Fi 6 harddware. {{< sponsored "The FreeBSD Foundation" >}}
+The man:iwx[4] wireless driver supports 802.11ac (VHT) for Intel Wi-Fi 6 hardware. {{< sponsored "The FreeBSD Foundation" >}}
 The man:rtwn[4] wireless driver supports 802.11ac (VHT) for the RTL8812A and RTL8821A chipsets.
+The man:rtw89[4] wireless driver supports 802.11g for some Realtek Wi-Fi 6 and Wi-Fi 7 hardware.
+gitref:a2d1e07f6451[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
+
 
 [[hardware]]
 == Hardware Support
