--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -955,9 +955,6 @@ Audio now supports asynchronous device detach.
 This greatly simplifies hot plugging and unplugging of things such as USB headsets, and eases use of PulseAudio in cases that require operating system sleep and wake (suspend and resume).
 gitref:d692c314d29a[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
-`ena` has been upgraded to 2.8.0.
-gitref:6bf02434bd9a[repository=src] {{< sponsored "Amazon, Inc." >}}
-
 `ice_ddp` has been upgraded to 1.3.41.0.
 gitref:a9d78bb714e3[repository=src] {{< sponsored "Intel Corporation" >}}
 
@@ -998,6 +995,7 @@ Required firmware files are already included in to package:comms/iwmbt-firmware[
 gitref:8e62ae9693bd[repository=src]
 
 man:ena[4] driver version has been updated to v2.8.1.
+gitref:6bf02434bd9a[repository=src] {{< sponsored "Amazon, Inc." >}}
 gitref:a1685d25601e[repository=src] {{< sponsored "Amazon, Inc." >}}
 
 man:bnxt[4]: Enable NPAR support on BCM57504 10/25GbE NICs.
@@ -1012,7 +1010,9 @@ gitref:32fdad17f060[repository=src]
 
 man:ix[4]: Add support for 1000BASE-BX SFP modules.
 Add support for 1Gbit BiDi modules.
+Add support for Intel Ethernet Network Adapter E610.
 gitref:89d4096950c4[repository=src]
+gitref:dea5f973d0c8[repository=src]
 
 man:igc[4]: Fix attach for I226-K and LMVP devices.
 The device IDs for these were in the driver's list of PCI ids to attach to, but `igc_set_mac_type()` had never been setup to set the correct mac type for these devices.
