relnotes: Document bsddialog version and use in bsdinstall/bsdconfig

--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -510,6 +510,10 @@ See https://wiki.freebsd.org/Kerberos/Heimdal2MIT_KDC_Migration for how to use `
 gitref:9fd3b28d4e0d[repository=src]
 gitref:23fbea8cf2f3[repository=src]
 
+The man:bsdconfig:8 and man:bsdinstall:8 utilities now use man:bsddialog:1 instead of GNU dialog.
+gitref:c36b3dbc99d1[repository=src]
+gitref:04b465777a09[repository=src]
+
 [[userland-contrib]]
 === Contributed Software
 
@@ -542,6 +546,9 @@ gitref:fdc4a7c8012b[repository=src]
 Existing setups will continue to work emitting a warning.
 The snapshot used is 20251026.
 gitref:4afb96fdd272[repository=src].
+
+`bsddialog` has been upgraded to 1.0.5.
+gitref:0595e10ec773[repository=src]
 
 `libarchive` has been upgraded to 3.8.2.
 gitref:8a0b57ba54f0[repository=src]
