relnotes: New versions of byacc and ncurses

--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -550,6 +550,9 @@ gitref:4afb96fdd272[repository=src].
 `bsddialog` has been upgraded to 1.0.5.
 gitref:0595e10ec773[repository=src]
 
+`byacc` has been upgraded to 20240109.
+gitref:822ca3276345[repository=src]
+
 `libarchive` has been upgraded to 3.8.2.
 gitref:8a0b57ba54f0[repository=src]
 
@@ -564,6 +567,9 @@ gitref:128bace5102e[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 `libpcap` has been upgraded to 1.10.5.
 gitref:26f21a6494b4[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
+
+`ncurses` has been upgraded to 6.5.
+gitref:21817992b331[repository=src]
 
 `tcpdump` has been upgraded to 4.99.5.
 gitref:ec3da16d8bc1[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
