relnotes: Document NVMe over Fabrics

--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1179,6 +1179,20 @@ Now use the proper `{NGROUPS_MAX} + 1` value, with `{NGROUPS_MAX}` being fetched
 gitref:e87848a8150e[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 
+Add support for accessing remote NVMe over Fabrics controllers over the TCP transport.
+New commands added to man:nvmecontrol[8] are used to establish connections to remote controllers.
+Once connections are established they are handed off to the man:nvmf[4] kernel module which creates `nvme__X__` devices and exports remote namespaces as man:nda[4] disks.
+gitref:a1eda74167b5[repository=src],
+gitref:1058c12197ab[repository=src]
+{{< sponsored "Chelsio Communications" >}}
+
+Add support for exporting namespaces to remote NVMe over Fabrics hosts over the TCP transport.
+The man:nvmft[4] kernel module adds a new frontend to the CAM target layer which exports man:ctl[4] LUNs as NVMe namespaces to remote hosts.
+The man:ctld[8] daemon now supports NVMe controllers in addition to iSCSI targets and is responsible for accepting incoming connection requests and handing off connected queue pairs to man:nvmft[4].
+gitref:a15f7c96a276[repository=src],
+gitref:66b5296f1b29[repository=src]
+{{< sponsored "Chelsio Communications" >}}
+
 [[boot-loader]]
 == Boot Loader Changes
 
