--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -444,23 +444,23 @@ gitref:fa7b31166ddb[repository=src]
 The man:usbconfig[8] utility now reads the descriptions of usb vendor and products from [.filename]#/usr/share/misc/usb_vendors# when available, similar to what man:pciconf[8] does.
 gitref:7b9a772f9f64[repository=src]
 
-An option has been added to change the directory in man:env[1] which closely resembles the feature in the GNU version of env, although it does not support long options.
+The man:env[1] utility has gained an option to change the directory, which closely resembles the feature in the GNU version of env, although it does not support long options.
 gitref:08e8554c4a39[repository=src] {{< sponsored "Klara, Inc." >}}
 
-man:ps[1] now automatically removes canned displays' columns that contain same data as some explicitly-requested columns.
+The man:ps[1] utility now automatically removes canned displays' columns that contain same data as some explicitly-requested columns.
 Before this change, if some user requested to add some "canned display" (options `-j`, `-l`, `-u` or `-v`), columns in it that were duplicates of explicitly-requested ones earlier on the command line were omitted, but this did not work the other way around, when a canned display appears before explicitly-requested columns.
 Additionally, columns with different keywords but which are aliases to the same
 keyword are now also considered holding the same data, in addition to columns having the same keyword.
 gitref:cd768a840644[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 
-man:ps[1]'s `-O` option is now more versatile and predictable.
+The man:ps[1] utility's `-O` option is now more versatile and predictable.
 The man:ps[1] display's list of columns is now first built without taking into account the `-O` options.
 In a second step, all columns passed via `-O` are finally inserted after the built-so-far display's first PID column (if it exists, else at start), in their order of appearance as arguments to the `-O` options.
 gitref:5dad61d9b949[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 
-man:ps[1]'s `-a` and `-A` options now always show all processes.
+The man:ps[1] utility's `-a` and `-A` options now always show all processes.
 When combined with other options affecting the selection of processes, except for `-X` and `-x`, option `-a` would have no effect (and `-A` would reduce to just `-x`).
 This was in contradiction with the rule applying to all other selection options stating that one process is listed as soon as any of these options has been specified and selects it, which is both mandated by POSIX and arguably a natural expectation.
 As a practical consequence, specifying `-a` or `-A` now causes all processes to be listed regardless of other selection options such as `-U`, `-p`, `-G`, etc., except for the `-X` and `-x` filter options, which continue to apply.
@@ -469,27 +469,27 @@ Option `-J`, contrary to its apparent initial intent, never worked as a filter i
 gitref:93a94ce731a8[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 
-man:ps[1] now matches current user's processes using the effective user ID.
+The man:ps[1] utility now matches current user's processes using the effective user ID.
 Previously, we would match using the real user ID.
 This puts man:ps[1] in conformance with POSIX on that topic.
 gitref:1aabbb25c9f9c4372[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 
-man:ps[1]'s `-U` flag now selects processes by real user IDs.
+The man:ps[1] utility's `-U` flag now selects processes by real user IDs.
 This is what POSIX mandates for option `-U` and arguably the behavior that most users actually need in most cases.
 Before, `-U` would select processes by their effective user IDs (which is the behavior mandated by POSIX for option `-u`).
 gitref:995b690d1398[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 
-Add flags to filter jail prison and vnet variables in man:sysctl[8] output.
-So users do not have to contact the source code to tell whether a variable is a jail prison / vnet one or not.
-gitref:615c9ce250ee[repository=src].
+The man:sysctl[8] utility has gained flags to filter jail prison and vnet variables,
+so users do not have to contact the source code to tell whether a variable is a jail prison / vnet one or not.
+gitref:615c9ce250ee[repository=src]
 
-man:grep[1] no longer follows symbolic links by default for recursive searches.
+The man:grep[1] utility no longer follows symbolic links by default for recursive searches.
 This matches the documented behavior in the manual page.
 gitref:3a2ec5957ea9[repository=src]
 
-man:mdo[1] now supports fully specifying all users and groups in the target credentials.
+The man:mdo[1] utility now supports fully specifying all users and groups in the target credentials.
 As a convenience, in addition to a full explicit specification, it allows starting from a baseline providing default values for all attributes, which is either the login credentials from some user in the password database or the current credentials, and then amending these attributes selectively.
 The manual page has been updated to describe the new options and their interactions.
 gitref:4ffcb1a4a99c[repository=src]
@@ -498,20 +498,20 @@ gitref:4ffcb1a4a99c[repository=src]
 
 When booting in single-user mode, man:init[8] now changes the working directory to `/root`, using `/` only as a fallback.
 The `/.profile` link to `/root/.profile` is no more installed.
-gitref:b4b91207ab6f[repository=src]
+gitref:b4b91207ab6f[repository=src],
 gitref:ca771d7ae527[repository=src]
 
 The deprecated man:ftpd[8] has been removed from the base system.
 Users who still need it can install the `ftp/freebsd-ftpd` port.
 gitref:259bb93b80c0[repository=src]
 
-Add a `-f` option to `kadmin -l dump` which can be used to dump the Heimdal KDC database in a format that can be loaded into the MIT KDC.
-See https://wiki.freebsd.org/Kerberos/Heimdal2MIT_KDC_Migration for how to use `-f` to transfer/convert the KDC database.
-gitref:9fd3b28d4e0d[repository=src]
+The Kerberos v5 database administration program learned how to dump the Heimdal KDC database in a format which can be loaded into the MIT KDC.
+See https://wiki.freebsd.org/Kerberos/Heimdal2MIT_KDC_Migration for how to use `kadmin -l dump -f` to transfer/convert the KDC database.
+gitref:9fd3b28d4e0d[repository=src],
 gitref:23fbea8cf2f3[repository=src]
 
-The man:bsdconfig:8 and man:bsdinstall:8 utilities now use man:bsddialog:1 instead of GNU dialog.
-gitref:c36b3dbc99d1[repository=src]
+The man:bsdconfig[8] and man:bsdinstall[8] utilities now use man:bsddialog[1] instead of GNU dialog.
+gitref:c36b3dbc99d1[repository=src],
 gitref:04b465777a09[repository=src]
 
 [[userland-contrib]]
@@ -531,7 +531,7 @@ gitref:59fc2b0166f7[repository=src]
 The man:jemalloc[3] library has been updated to version 5.3.0.
 gitref:c43cad871720[repository=src]
 
-`bmake` has been upgraded to 20250804, providing many debugging
+The man:bmake[1] build system has been upgraded to 20250804, providing many debugging
 improvements, bug fixes such as detecting and rejecting `gmake`
 syntax, and feature improvements such as a floating point argument to
 `-j` being used as a multiple of the number of cpus available.
@@ -539,66 +539,63 @@ syntax, and feature improvements such as a floating point argument to
 The man:sendmail[8] suite has been upgraded to version 8.18.1, addressing CVE-2023-51765.
 gitref:58ae50f31e95[repository=src]
 
-`bc` has been upgraded to 7.1.0.
+The man:bc[1] calculator has been upgraded to 7.1.0.
 gitref:fdc4a7c8012b[repository=src]
 
-`blacklist` has been renamed upstream to `blocklist`.
+The `blacklist` suite has been renamed upstream to `blocklist`.
 Existing setups will continue to work emitting a warning.
 The snapshot used is 20251026.
-gitref:4afb96fdd272[repository=src].
+gitref:4afb96fdd272[repository=src]
 
-`bsddialog` has been upgraded to 1.0.5.
+The man:bsddialog[1] utility has been upgraded to 1.0.5.
 gitref:0595e10ec773[repository=src]
 
-`byacc` has been upgraded to 20240109.
+The man:byacc[1] parser generator has been upgraded to 20240109.
 gitref:822ca3276345[repository=src]
 
-`libarchive` has been upgraded to 3.8.2.
+The `libarchive` library has been upgraded to 3.8.2.
 gitref:8a0b57ba54f0[repository=src]
 
-`libcbor` has been upgraded to 0.11.0.
+The `libcbor` library has been upgraded to 0.11.0.
 gitref:1755b9daa693[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
-`libcxxrt` has been upgraded to vendor snapshot 6f2fdfebcd62.
+The `libcxxrt` library has been upgraded to vendor snapshot 6f2fdfebcd62.
 gitref:d0dcee46d971[repository=src]
 
-`libfido2` has been upgraded to 1.14.0.
+The `libfido2` library has been upgraded to 1.14.0.
 gitref:128bace5102e[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
-`libpcap` has been upgraded to 1.10.5.
+The `libpcap` library has been upgraded to 1.10.5.
 gitref:26f21a6494b4[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
-`ncurses` has been upgraded to 6.5.
+The man:ncurses[3] library has been upgraded to 6.5.
 gitref:21817992b331[repository=src]
 
-`tcpdump` has been upgraded to 4.99.5.
+The man:tcpdump[1] utility has been upgraded to 4.99.5.
 gitref:ec3da16d8bc1[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
-`unbound` has been upgraded to 1.24.1.
+The `unbound` DNS validating resolver has been upgraded to 1.24.1.
 gitref:a988846174e0[repository=src]
 
-`llvm` has been upgraded to 19.1.7-0-gcd708029e0b2.
+The `llvm` compiler infrastructure has been upgraded to 19.1.7-0-gcd708029e0b2.
 gitref:dc3f24ea8a25[repository=src]
 
-man:zfs[8]: OpenZFS has been updated to zfs-2.4.0-rc4.
+The OpenZFS filesystem has been updated to zfs-2.4.0-rc4.
 gitref:7b5b0f43eb06[repository=src]
 
-man:xz[1] has been updated to 5.8.1.
+The man:xz[1] data compressors have been updated to 5.8.1.
 gitref:128836d304d9[repository=src]
 
-man:less[1] has been updated to v679.
+The man:less[1] pager has been updated to v679.
 gitref:76bafc906926[repository=src]
 
-man:file[1] has been updated to 5.46.
+The man:file[1] identifier has been updated to 5.46.
 gitref:ae316d1d1cff[repository=src]
 
-man:expat[3] has been updated to 2.7.3.
-gitref:860583c83ef2[repository=src]
-
-man:zlib[3] has been updated to 1.3.1.
+The man:zlib[3] data compression library has been updated to 1.3.1.
 gitref:6255c67c3d1a[repository=src]
 
-`tzdata` has been updated to 2025b.
+The Time Zone Database, `tzdata`, has been updated to 2025b.
 gitref:475082194ac8[repository=src]
 
 OpenSSH has been updated to 10.0p2.
@@ -607,11 +604,11 @@ OpenSSH has been updated to 10.0p2.
 OpenSSL has been updated to 3.5.4.
 gitref:c0366f908ff4[repository=src]
 
-`googletest` has been updated to 1.15.2.
+The Google Test C++ testing framework has been updated to 1.15.2.
 One notable change is that GoogleTest 1.15.x now officially requires C++-14 (1.14.x required C++-11).
 gitref:1d67cec52542[repository=src]
 
-`spleen` has been updated to Spleen 2.1.0.
+The `spleen` man:vt[4] console font has been updated to version 2.1.0.
 gitref:26336203d32c[repository=src]
 
 MIT KRB5 1.22.1 Kerberos replaces Heimdal 1.5.2 by default.
