--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -430,6 +430,7 @@ gitref:516009ce8d38[repository=src]
 The man:date[1] program now supports nanoseconds.
 For example: `date -Ins` prints "2024-04-22T12:20:28,763742224+02:00" and `date +%N` prints "415050400".
 gitref:eeb04a736cb9[repository=src]
+{{< sponsored "Klara, Inc." >}}
 
 The man:dtrace[1] utility can now generate machine-readable output in JSON, XML, and HTML using man:libxo[3].
 gitref:aef4504139a4[repository=src] {{< sponsored "Innovate UK" >}}
@@ -487,7 +488,7 @@ gitref:615c9ce250ee[repository=src]
 
 The man:grep[1] utility no longer follows symbolic links by default for recursive searches.
 This matches the documented behavior in the manual page.
-gitref:3a2ec5957ea9[repository=src]
+gitref:fc12c191c087[repository=src]
 
 The man:mdo[1] utility now supports fully specifying all users and groups in the target credentials.
 As a convenience, in addition to a full explicit specification, it allows starting from a baseline providing default values for all attributes, which is either the login credentials from some user in the password database or the current credentials, and then amending these attributes selectively.
@@ -772,6 +773,10 @@ It is compatible with OpenStack and many hosting facilities.
 See the https://cloud-init.io[cloud-init] web site and the commit messages,
 gitref:16a6da44e28d[repository=src] gitref:227e7a205edf[repository=src] {{< sponsored "OVHcloud" >}}
 
+Basic Cloudinit images no longer generate RSA host keys by default for
+SSH.
+gitref:b22be3bbb2de[repository=src]
+
 The FreeBSD project is now publishing OCI-compatible container images.
 gitref:8a688fcc242e[repository=src]
 
@@ -799,6 +804,12 @@ The FreeBSD project now publishes "builder" EC2 images; these boot into a memory
 gitref:584265890303[repository=src] {{< sponsored "Amazon" >}}
 
 FreeBSD "base" EC2 images now boot up to 76% faster than corresponding {releasePrev} images, with the largest improvements found on arm64 ("Graviton") instances.
+
+EC2 AMIs no longer generate RSA host keys by default for SSH.
+RSA host key generation can be re-enabled by setting `sshd_rsa_enable="YES"` in
+`/etc/rc.conf` if it is necessary to support very old SSH clients.
+gitref:0aabcd75dbc2[repository=src]
+{{< sponsored "Amazon" >}}
 
 [[kernel]]
 == Kernel
@@ -888,6 +899,14 @@ The function is responsible for either using a free HW channel (if `vchans` are 
 `hw.snd.vchans_enable` (previously `hw.snd.maxautovchans`) and `dev.pcm.X.{play|rec}.vchans` now work as tunables to only enable/disable `vchans`, as opposed to setting their number and/or (de-)allocating vchans.
 Since these sysctls do not trigger any (de-)allocations anymore, their effect is instantaneous, whereas before it could have frozen the machine (when trying to allocate new vchans) when setting `dev.pcm.X.{play|rec}.vchans` to a very large value.
 gitref:960ee8094913[repository=src].
+{{< sponsored "The FreeBSD Foundation" >}}
+
+The `hw.snd.version` man:sysctl[8] knob was removed.
+gitref:7398d1ece5cf[repository=src]
+{{< sponsored "The FreeBSD Foundation" >}}
+
+The `unit.*` code in man:sound[4] was retired, and as part of that the `hw.snd.maxunit` man:loader[8] tunable was removed.
+gitref:25723d66369f[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 
 Gradual slowdowns and freezes experienced by owners of some AMD GPUs using the amdgpu DRM driver from the `drm-kmod` ports, starting with v5.15 (`graphics/drm-515-kmod` port), have been fixed.
@@ -1400,11 +1419,23 @@ Furthermore, it is possible to define a man:domainset[9] policy for each guest N
 This is supported only for amd64 guests for now.
 gitref:f1d705d4f431[repository=src]
 
-The NVMM hypervisor is now detected.
-gitref:34f40baca641[repository=src]
-
 The VNC server in man:bhyve[8] will now show the correct colors when using the package:www/novnc[] client.
 gitref:f9e09dc5b1d5[repository=src]
+
+When running man:bhyve[8] guests with a boot ROM, i.e., bhyveload(8) is not used, bhyve now assumes that the boot ROM will enable PCI BAR decoding.
+This is incompatible with some boot ROMs, particularly outdated builds of `edk2-bhyve`.
+To restore the old behavior, add `pci.enable_bars='true'` to your bhyve configuration.
+Note that the `uefi-edk2-bhyve` package has been renamed to `edk2-bhyve`.
+gitref:e962b37bf0ff[repository=src]
+{{< sponsored "Innovate UK" >}}
+
+amd64 man:bhyve[8]'s `lpc.bootrom` and `lpc.bootvars` options are deprecated.
+Use the top-level `bootrom` and `bootvars` options instead.
+gitref:43caa2e805c2[repository=src]
+{{< sponsored "Innovate UK" >}}
+
+The NVMM hypervisor is now detected.
+gitref:34f40baca641[repository=src]
 
 Under Hyper-V, TLB flushes are now performed using hypercalls rather than IPIs, providing up to a 40% improvement in TLB performance.
 gitref:7ece5993b787[repository=src] {{< sponsored "Microsoft" >}}
@@ -1425,12 +1456,6 @@ The Linux man:inotify[2] system calls are now implemented in the Linuxulator.
 Many improvements to the audio stack including support for hot-swapping in man:mixer[8], and the addition of man:mididump[1].
 gitref:cf9d2fb18433[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 gitref:7224e9f2d4af[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
-
-In the audio stack, `hw.snd.maxautovchans` has been retired.
-The `hw.snd.vchans_enable` sysctl has been introduced which, along with `dev.pcm.X.{play|rec}.vchans`, from now on work as tunables to only enable/disable vchans, as opposed to setting their number and/or (de-)allocating vchans.*
-Since these sysctls do not trigger any (de-)allocations anymore, their effect is instantaneous, whereas before we could have frozen the machine (when trying to allocate new vchans) when setting `dev.pcm.X.{play|rec}.vchans` to a very large value.
-gitref:02d4eeabfd73e6a8[repository=src]
-{{< sponsored "The FreeBSD Foundation" >}}
 
 A new utility man:sndctl[8] has been added to concentrate the various
 interfaces for viewing and manipulating audio device settings (sysctls,
@@ -1461,6 +1486,9 @@ This section covers changes to manual (man:man[1]) pages and other documentation
 
 [[man-pages]]
 === Man Pages
+
+Filesystem manual pages have been moved to section four.
+gitref:1687d77197c0[repository=src]
 
 A new man:networking[7] manual page provides a quickstart guide to connecting the system to networks including Wi-Fi, and links to other manual pages and the handbook.
 gitref:39f92a4c4c49[repository=src]
