--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -25,6 +25,8 @@ The release notes for FreeBSD {releaseCurrent} contain a summary of the changes 
 This document lists applicable security advisories that were issued since the last release, as well as significant changes to the FreeBSD kernel and userland.
 Some brief remarks on upgrading are also presented.
 
+toc::[]
+
 [[intro]]
 == Introduction
 
