--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -819,6 +819,17 @@ This section covers changes to kernel configurations, system tuning, and system 
 [[kernel-general]]
 === General Kernel Changes
 
+ktrace(2) will now record detailed information about capability mode
+violations.
+The kdump(1) utility has been updated to display such
+information.
+gitref:9bec84131215[repository=src],
+gitref:96c8b3e50988[repository=src],
+gitref:05296a0ff616[repository=src],
+gitref:6a4616a529c1[repository=src],
+gitref:0cd9cde767c3[repository=src],
+gitref:aa32d7cbc92c[repository=src]
+
 FreeBSD now natively implements the Linux man:inotify[2] interface.
 The system calls themselves are not API-compatible, but libc provides an API-compatible interface, so software which relies on inotify can be run unmodified.
 gitref:f1f230439fa4[repository=src],
@@ -1111,6 +1122,16 @@ This section covers changes and additions to file systems and other storage subs
 
 [[storage-nfs]]
 === NFS
+
+The default value of the `nfs_reserved_port_only` man:rc.conf[5] setting has
+changed.
+The FreeBSD NFS server now requires the source port of requests to be in the
+privileged port range (i.e., ≤ 1023), which generally requires the client to
+have elevated privileges on their local system.
+The previous behavior can be restored by setting `nfs_reserved_port_only=NO` in
+man:rc.conf[5].
+gitref:6d5ce2bb6344[repository=src]
+{{< sponsored "The FreeBSD Foundation" >}}
 
 Define a new `-a` command line option man:mountd[8] that prevents exporting a file system with the `-alldirs` flag if the directory path is not a server file system mount point.
 gitref:07cd69e272da[repository=src]
