--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -418,7 +418,7 @@ gitref:538994626b9f[repository=src], gitref:37dc394170a5[repository=src], gitref
 
 The man:bsnmpd[1] daemon no longer supports legacy UDP transport.
 Users, that have not updated their `/etc/snmpd.config` since 12.0-RELEASE or older will need to merge in the new configuration.
-In particular, the transport definition shall be changed from begemotSnmpdPortStatus OID to begemotSnmpdTransInetStatus.
+In particular, the transport definition shall be changed from `begemotSnmpdPortStatus` OID to `begemotSnmpdTransInetStatus`.
 gitref:9ba51cce8bbd[repository=src]
 
 [[userland-programs]]
@@ -1247,7 +1247,7 @@ gitref:86d3ec359a56[repository=src]
 
 This section covers the boot loader, boot menu, and other boot-related changes.
 
-The ASCII man:loader[8] art may once again be enabled on graphical systems via an optional `loader_gfx` variable in loader.conf[5].
+The ASCII man:loader[8] art may once again be enabled on graphical systems via an optional `loader_gfx` variable in man:loader.conf[5].
 gitref:bef6d85b6de5[repository=src]
 
 The man:loader[8] now reads local configuration files listed in the variable `local_loader_conf_files` after other configuration files, defaulting to [.filename]#/boot/loader.conf.local#.
