relnotes: Note nvme namespace change dynamic notification
This is important for cloud users that grow / shrink their nvme drives.

Sponsored by:		Netflix

--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1232,6 +1232,11 @@ gitref:a15f7c96a276[repository=src],
 gitref:66b5296f1b29[repository=src]
 {{< sponsored "Chelsio Communications" >}}
 
+Add support for dynamicly resizing NVMe namespaces.
+The man:nvd[4] and man:nda[4] drivers now notify geom of sizes changes in real time.
+gitref:86d3ec359a56[repository=src]
+{{< sponsored "Netflix" >}}
+
 [[boot-loader]]
 == Boot Loader Changes
 
@@ -1391,7 +1396,7 @@ This means that FreeBSD does not skip the `TIME_WAIT` state anymore for endpoint
 The new sysctl variable `net.inet.tcp.msl_local` can be used to control the time these endpoints stay in the `TIME_WAIT` state.
 The sysctl variable `net.inet.tcp.nolocaltimewait` is deprecated and intended to be removed in FreeBSD 16.
 gitref:c3fc0db3bc50[repository=src]
-{{< sponsored "Netflix, Inc." >}}
+{{< sponsored "Netflix" >}}
 
 The local stream (AF_UNIX/SOCK_STREAM) and sequenced packet stream (AF_UNIX/SOCK_SEQPACKET) sockets have been improved for better bulk transfer and round trip times.
 The SOCK_SEQPACKET socket has been brought to the specification and now behaves as a true stream socket, while in previous FreeBSD releases it could exhibit features of
