relnoates: Note Lua 5.4.8
And update awk to include netflix sponsorship.

Sponsored by:		Netflix

--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -523,6 +523,7 @@ gitref:04b465777a09[repository=src]
 One True Awk (man:awk[1]) has been updated to 2nd Edition, with new -csv support and UTF-8 support.
 The snapshot used is 20250804.
 gitref:b45a181a74c8[repository=src]
+{{< sponsored "Netflix" >}}
 
 The system reference manual toolchain, man:mandoc[1], has been updated to version 1.14.6 snapshot 2025-09-26. This version includes improved compatibility with groff and DocBook, improved html and markdown output, and the deprecation of the LIBRARY section.
 gitref:c1c95add8c80[repository=src],
@@ -606,6 +607,10 @@ OpenSSH has been updated to 10.0p2.
 
 OpenSSL has been updated to 3.5.4.
 gitref:c0366f908ff4[repository=src]
+
+Lua has been updated to 5.4.8.
+gitref:3068d706eabe[repository=src]
+{{< sponsored "Netflix" >}}
 
 The Google Test C++ testing framework has been updated to 1.15.2.
 One notable change is that GoogleTest 1.15.x now officially requires C++-14 (1.14.x required C++-11).
