relnotes: wordsmith linuxboot entry
Use a simpler construct, as I'm often given over to too much verbosity

Sponsored by:		Netflix

--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1269,7 +1269,7 @@ The detection of ACPI is now done earlier in man:loader.efi[8] on arm64 systems.
 The copy of [.filename]#loader.efi# on the EFI partition should be updated on arm64 systems using ACPI.
 gitref:05cf4dda599a[repository=src] gitref:16c09de80135[repository=src]
 
-The LinuxBoot loader can be used to boot FreeBSD from Linux on aarch64 systems as well as amd64.
+The LinuxBoot loader can be used to boot FreeBSD from Linux on aarch64 and amd64.
 gitref:46010641267[repository=src] {{< sponsored "Netflix" >}}
 
 The BIOS boot loader added back support for gzip and bzip2, but removed support for graphics mode (by default) to address size problems.
