--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1115,12 +1115,21 @@ gitref:138e36514fe8[repository=src]
 [[drivers-removals]]
 === Deprecated and Removed Drivers
 
-man:agp[4] has been planned for removal in FreeBSD 16.0, and the man page now states that it is deprecated.
+The man:agp[4] bus driver has been deprecated and planned for removal in FreeBSD 16.0.
 gitref:92af7c97e197[repository=src]
 gitref:cadadd1a0398[repository=src]
 
+The IBM PC floppy disk controller, man:fdc[4], and related utilities have been deprecated and planned for removal in FreeBSD 16.0.
+gitref:4c736cfc69a7[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
+
+The man:firewire[4] bus and related drivers have been deprecated and planned for removal in FreeBSD 16.0.
+gitref:fc889167c319[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
+
 man:syscons[4] has been planned for removal in future releases, and has been noted as deprecated in the man pages to notify users to migrate to man:vt[4].
 gitref:2bc5b1d60512[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
+
+The man:upgt[4] USB 802.11g driver has been deprecated and planned for removal in FreeBSD 16.0.
+gitref:7f8a5c5a1585[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 [[storage]]
 == Storage
@@ -1546,12 +1555,6 @@ It has now a longer introduction and a new SECURITY CONSIDERATIONS section.
 gitref:20ebb6ec5ac0[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 {{< sponsored "Google LLC (GSoC 2025)" >}}
-
-man:firewire[4]: Add deprecation notice.
-This was originally discussed as part of FreeBSD 15 planning, but did not happen in time.
-Add the deprecation notice now, with an expectation that it will be removed before FreeBSD 16.
-gitref:fc889167c319[repository=src].
-{{< sponsored "The FreeBSD Foundation" >}}
 
 The ethernet switch controllers, man:mtkswitch[4], man:ip17x[4], man:ar40xx[4], and man:e6000sw[4] have gained initial manual pages.
 
