--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -766,8 +766,8 @@ gitref:8c922db4f3d9[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 The cryptographically weak DSA signature algorithm was removed from OpenSSH, following upstream.
 
-man:publickey[5] stuffs has been deprecated.
-This uses DES and it is likely that nobody uses that in 2025.
+The man:publickey[5] database has been removed,
+This uses DES and we hope that nobody uses that in 2025.
 gitref:9197c04a251b[repository=src]
 
 [[cloud]]
