--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -960,6 +960,9 @@ On amd64, handling of the `%fsbase`/`%gsbase` registers and tls base were rework
 gitref:68ba38dad3[repository=src]
 {{< sponsored "the FreeBSD Foundation" >}}
 
+The venerable i386, armv6, and powerpc platforms have been retired.
+We thank them for their service.
+
 [[drivers]]
 == Devices and Drivers
 
