--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1532,13 +1532,16 @@ This section covers changes to manual (man:man[1]) pages and other documentation
 [[man-pages]]
 === Man Pages
 
-Filesystem manual pages have been moved to section four.
+Manual pages on filesystems have been moved to section four, the Kernel Interfaces Manual.
 gitref:1687d77197c0[repository=src]
 
 A new man:networking[7] manual page provides a quickstart guide to connecting the system to networks including Wi-Fi, and links to other manual pages and the handbook.
 gitref:39f92a4c4c49[repository=src]
 
-Refer to man:graid[8] and man:zfs[8] instead of man:gvinum[8] in man:ccdconfig[8]).
+The man:build[7] manual has been revised to incorporate instructions on building the system from source.
+gitref:275f61111f435[repository=src]
+
+Refer to man:graid[8] and man:zfs[8] instead of man:gvinum[8] in man:ccdconfig[8].
 gitref:55cb3a33d920[repository=src]
 
 The man:ps[1] manual page has been revamped to explain the general principles, and descriptions in there have been updated to match reality.
@@ -1560,10 +1563,16 @@ gitref:20ebb6ec5ac0[repository=src]
 {{< sponsored "Google LLC (GSoC 2025)" >}}
 
 The ethernet switch controllers, man:mtkswitch[4], man:ip17x[4], man:ar40xx[4], and man:e6000sw[4] have gained initial manual pages.
+gitref:37f00bc257d[repository=src],
+gitref:f750a114d2c[repository=src],
+gitref:91c975c3913[repository=src],
+gitref:6da793a8caa[repository=src]
 
 man:mount[8] has gained an example for remounting all filesystems read/write in single-user mode.
+gitref:c3e06b23b417[repository=src]
 
 Manual pages for the lua man:loader[8] modules have had their descriptions reworded to optimize man:apropos[1] results.
+gitref:5d59c1b4f14e[repository=src]
 
 The manual pages style guide, man:style.mdoc[5], has gained a section for listing supported hardware.
 When listed this way, the supported hardware will be listed in link:https://www.freebsd.org/releases/{localRel}R/hardware[the supported hardware notes].
@@ -1572,7 +1581,26 @@ Many manuals have had this section added or reworded in this release.
 Much work has gone into adding man:sysctl[8]s and environment variables to the manual.
 Try searching for them with `apropos Va=here.is.the.sysctl` or `apropos Ev=here_is_the_environment_variable`.
 
+The man:intro[1] to the General Commands manual has been revised, incorporating a statement about installing additional commands, and a listing of cannonical command directories.
+gitref:cc0af6d5a6c2[repository=src]
+
+The man:intro[2] to the System Calls manual has been revised, incorporating links and a HISTORY section from OpenBSD.
+gitref:9a62cdc01327[repository=src],
+gitref:69ff2d754c1c[repository=src],
+gitref:6dfbe695c322[repository=src],
+gitref:de525c502a3a[repository=src],
+gitref:d846f33bb6d4[repository=src],
+gitref:4696ca7baf2f[repository=src],
+gitref:9e8df7900f52[repository=src],
+gitref:bcc57e971597[repository=src]
+
 The man:intro[5] to the File Formats manual has been revised, incorporating improvements from OpenBSD.
+gitref:8d65152cbfc8[repository=src],
+gitref:26ec37653662[repository=src],
+gitref:37508388d066[repository=src],
+gitref:a6175f28da70[repository=src]
+
+The filesystem hierarchy index manual, man:hier[7], has been revised, incorporating a great deal of crossreferences, and increased detail on `/usr/local`.
 
 [[ports]]
 == Ports Collection and Package Infrastructure
